# C-Eniac

./: .gitignore  .hidden  CMakeLists.txt  DecToBin.c  EOFValue.c  OneWordPerLine.c  Program.c  README.md  README.txt  Test.c  a.out  atof.c  atoi.c  chapter_two.c  comment.c  fahr_to_cel_functional.c  forthlang.c  functions.c  grep.c  lists.c  lower.c  main.c  match_finder.c  maxline.c  maxline_extern.c  myxor.c  pointers.c  power_function.c  proton_recovery_phrase.txt  reverse.c  reverse2.c  split_bufferdata.c  structure.c  sum_function.c  test.c  testfile.c  tt.c  xor-pro.c
External Variables/: reverse-polish-cal.c
Pre-built.2/include/: pthread.h
hajizade/: new_lasttrans_main.c
